--- a/src/pages/About.mdx
+++ b/src/pages/About.mdx
@@ -13,6 +13,12 @@ import LinkExternal from '../components/Router/LinkExternal'
 <Row>
 <Col>
 
+# About COVID-19 Scenarios Hawaii
+
+COVID-19 Scenarios Hawaii was adapted from the original COVID-19 Scenarios application (see below) to apply Hawaii specific scenario information. 
+
+The adaptation is a combined effort between <LinkExternal url="https://www.hawaiidata.org">Hawaii Data Collaborative</LinkExternal> and <LinkExternal url="https://windwardapps.com">Windward Apps</LinkExternal>.
+
 # About COVID-19 Scenarios
 
 This web application serves as a planning tool for COVID-19 outbreaks in communities across the world.
@@ -27,6 +33,18 @@ The source code of this tool is freely available at <LinkExternal url="https://g
 
  - directly propose changes in code, documentation or data by <LinkExternal url="https://github.com/neherlab/covid19_scenarios/fork">Forking</LinkExternal> our repository on GitHub, commiting changes to your new fork and openning a <LinkExternal url="https://github.com/neherlab/covid19_scenarios/fork">Pull Request</LinkExternal>, so that we could review and merge the changes.
 
+# The people behind COVID-19 Scenarios
+
+This tool was developed at the University of Basel in 
+the <LinkExternal url="https://neherlab.org">&nbsp;research group&nbsp;</LinkExternal> of Richard Neher by
+          
+- Ivan Aksamentov
+- Nicholas Noll
+- Richard Neher
+- <LinkExternal url="https://ki.se/en/mtc/jan-albert-group">Jan Albert</LinkExternal>
+
+at the Karolinska hospital in Stockholm had the initial idea to develop this tool and suggested
+features and parameters. Jan and Robert Dyrdak provided parameter estimates.
 
 ## Basic assumptions
 
